@@ -1,12 +1,10 @@
 package org.jabref.cli;
 
-import java.io.File;
 import java.io.IOException;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
@@ -20,10 +18,12 @@ import org.jabref.gui.externalfiles.AutoSetFileLinksUtil;
 import org.jabref.gui.externalfiletype.ExternalFileTypes;
 import org.jabref.gui.undo.NamedCompound;
 import org.jabref.logic.JabRefException;
+import org.jabref.logic.bibtex.FieldWriterPreferences;
 import org.jabref.logic.citationkeypattern.CitationKeyGenerator;
 import org.jabref.logic.exporter.AtomicFileWriter;
 import org.jabref.logic.exporter.BibDatabaseWriter;
 import org.jabref.logic.exporter.BibtexDatabaseWriter;
+import org.jabref.logic.exporter.EmbeddedBibFilePdfExporter;
 import org.jabref.logic.exporter.Exporter;
 import org.jabref.logic.exporter.ExporterFactory;
 import org.jabref.logic.exporter.SavePreferences;
@@ -31,6 +31,7 @@ import org.jabref.logic.exporter.TemplateExporter;
 import org.jabref.logic.exporter.XmpPdfExporter;
 import org.jabref.logic.importer.FetcherException;
 import org.jabref.logic.importer.ImportException;
+import org.jabref.logic.importer.ImportFormatPreferences;
 import org.jabref.logic.importer.ImportFormatReader;
 import org.jabref.logic.importer.OpenDatabase;
 import org.jabref.logic.importer.OutputPrinter;
@@ -52,10 +53,12 @@ import org.jabref.model.database.BibDatabase;
 import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.database.BibDatabaseMode;
 import org.jabref.model.entry.BibEntry;
+import org.jabref.model.entry.BibEntryTypesManager;
 import org.jabref.model.strings.StringUtil;
 import org.jabref.model.util.DummyFileUpdateMonitor;
 import org.jabref.model.util.FileHelper;
 import org.jabref.preferences.FilePreferences;
+import org.jabref.preferences.PreferencesService;
 import org.jabref.preferences.SearchPreferences;
 
 import com.google.common.base.Throwables;
@@ -68,11 +71,13 @@ public class ArgumentProcessor {
     private final JabRefCLI cli;
     private final List<ParserResult> parserResults;
     private final Mode startupMode;
+    private final PreferencesService preferencesService;
     private boolean noGUINeeded;
 
-    public ArgumentProcessor(String[] args, Mode startupMode) throws org.apache.commons.cli.ParseException {
+    public ArgumentProcessor(String[] args, Mode startupMode, PreferencesService preferencesService) throws org.apache.commons.cli.ParseException {
         cli = new JabRefCLI(args);
         this.startupMode = startupMode;
+        this.preferencesService = preferencesService;
         parserResults = processArguments();
     }
 
@@ -90,8 +95,8 @@ public class ArgumentProcessor {
         return result;
     }
 
-    private static Optional<ParserResult> importBibtexToOpenBase(String argument) {
-        BibtexParser parser = new BibtexParser(Globals.prefs.getImportFormatPreferences(), new DummyFileUpdateMonitor());
+    private static Optional<ParserResult> importBibtexToOpenBase(String argument, ImportFormatPreferences importFormatPreferences) {
+        BibtexParser parser = new BibtexParser(importFormatPreferences, new DummyFileUpdateMonitor());
         try {
             List<BibEntry> entries = parser.parseEntries(argument);
             ParserResult result = new ParserResult(entries);
@@ -151,7 +156,7 @@ public class ArgumentProcessor {
                 // * means "guess the format":
                 System.out.println(Localization.lang("Importing in unknown format") + ": " + file);
 
-                ImportFormatReader.UnknownFormatImport importResult = Globals.IMPORT_FORMAT_READER.importUnknownFormat(file, Globals.prefs.getTimestampPreferences(), new DummyFileUpdateMonitor());
+                ImportFormatReader.UnknownFormatImport importResult = Globals.IMPORT_FORMAT_READER.importUnknownFormat(file, new DummyFileUpdateMonitor());
 
                 System.out.println(Localization.lang("Format used") + ": " + importResult.format);
                 return Optional.of(importResult.parserResult);
@@ -222,9 +227,22 @@ public class ArgumentProcessor {
             automaticallySetFileLinks(loaded);
         }
 
-        if (cli.isWriteXMPtoPdf()) {
+        if (cli.isWriteXMPtoPdf() && cli.isEmbeddBibfileInPdf() || cli.isWriteMetadatatoPdf() && (cli.isWriteXMPtoPdf() || cli.isEmbeddBibfileInPdf())) {
+            System.err.println("Give only one of [writeXMPtoPdf, embeddBibfileInPdf, writeMetadatatoPdf]");
+        }
+
+        if (cli.isWriteMetadatatoPdf() || cli.isWriteXMPtoPdf() || cli.isEmbeddBibfileInPdf()) {
             if (!loaded.isEmpty()) {
-                writeXMPtoPdf(loaded, cli.getWriteXMPtoPdf(), Globals.prefs.getDefaultEncoding(), Globals.prefs.getXmpPreferences(), Globals.prefs.getFilePreferences());
+                writeMetadatatoPdf(loaded,
+                        cli.getWriteMetadatatoPdf(),
+                        preferencesService.getDefaultEncoding(),
+                        preferencesService.getXmpPreferences(),
+                        preferencesService.getFilePreferences(),
+                        preferencesService.getDefaultBibDatabaseMode(),
+                        Globals.entryTypesManager,
+                        preferencesService.getFieldWriterPreferences(),
+                        cli.isWriteXMPtoPdf() || cli.isWriteMetadatatoPdf(),
+                        cli.isEmbeddBibfileInPdf() || cli.isWriteMetadatatoPdf());
             }
         }
 
@@ -239,7 +257,7 @@ public class ArgumentProcessor {
 
         if (cli.isPreferencesExport()) {
             try {
-                Globals.prefs.exportPreferences(cli.getPreferencesExport());
+                preferencesService.exportPreferences(Path.of(cli.getPreferencesExport()));
             } catch (JabRefException ex) {
                 LOGGER.error("Cannot export preferences", ex);
             }
@@ -252,7 +270,7 @@ public class ArgumentProcessor {
         return loaded;
     }
 
-    private void writeXMPtoPdf(List<ParserResult> loaded, String filesAndCitekeys, Charset encoding, XmpPreferences xmpPreferences, FilePreferences filePreferences) {
+    private void writeMetadatatoPdf(List<ParserResult> loaded, String filesAndCitekeys, Charset encoding, XmpPreferences xmpPreferences, FilePreferences filePreferences, BibDatabaseMode databaseMode, BibEntryTypesManager entryTypesManager, FieldWriterPreferences fieldWriterPreferences, boolean writeXMP, boolean embeddBibfile) {
         if (loaded.isEmpty()) {
             LOGGER.error("The write xmp option depends on a valid import option.");
             return;
@@ -262,10 +280,11 @@ public class ArgumentProcessor {
         BibDatabase dataBase = pr.getDatabase();
 
         XmpPdfExporter xmpPdfExporter = new XmpPdfExporter(xmpPreferences);
+        EmbeddedBibFilePdfExporter embeddedBibFilePdfExporter = new EmbeddedBibFilePdfExporter(databaseMode, entryTypesManager, fieldWriterPreferences);
 
         if ("all".equals(filesAndCitekeys)) {
             for (BibEntry entry : dataBase.getEntries()) {
-                writeXMPtoPDFsOfEntry(databaseContext, entry.getCitationKey().orElse("<no cite key defined>"), entry, encoding, filePreferences, xmpPdfExporter);
+                writeMetadatatoPDFsOfEntry(databaseContext, entry.getCitationKey().orElse("<no cite key defined>"), entry, encoding, filePreferences, xmpPdfExporter, embeddedBibFilePdfExporter, writeXMP, embeddBibfile);
             }
             return;
         }
@@ -280,51 +299,69 @@ public class ArgumentProcessor {
             }
         }
 
-        writeXMPtoPdfByCitekey(databaseContext, dataBase, citeKeys, encoding, filePreferences, xmpPdfExporter);
-        writeXMPtoPdfByFileNames(databaseContext, dataBase, pdfs, encoding, filePreferences, xmpPdfExporter);
+        writeMetadatatoPdfByCitekey(databaseContext, dataBase, citeKeys, encoding, filePreferences, xmpPdfExporter, embeddedBibFilePdfExporter, writeXMP, embeddBibfile);
+        writeMetadatatoPdfByFileNames(databaseContext, dataBase, pdfs, encoding, filePreferences, xmpPdfExporter, embeddedBibFilePdfExporter, writeXMP, embeddBibfile);
 
     }
 
-    private void writeXMPtoPDFsOfEntry(BibDatabaseContext databaseContext, String citeKey, BibEntry entry, Charset encoding, FilePreferences filePreferences, XmpPdfExporter xmpPdfExporter) {
+    private void writeMetadatatoPDFsOfEntry(BibDatabaseContext databaseContext, String citeKey, BibEntry entry, Charset encoding, FilePreferences filePreferences, XmpPdfExporter xmpPdfExporter, EmbeddedBibFilePdfExporter embeddedBibFilePdfExporter, boolean writeXMP, boolean embeddBibfile) {
         try {
-            if (xmpPdfExporter.exportToAllFilesOfEntry(databaseContext, encoding, filePreferences, entry, Arrays.asList(entry))) {
-                LOGGER.info(String.format("Successfully written XMP metadata on at least one linked file of %s", citeKey));
-            } else {
-                LOGGER.error(String.format("Cannot write XMP metadata on any linked files of %s. Make sure there is at least one linked file and the path is correct.", citeKey));
+            if (writeXMP) {
+                if (xmpPdfExporter.exportToAllFilesOfEntry(databaseContext, encoding, filePreferences, entry, List.of(entry))) {
+                    System.out.println(String.format("Successfully written XMP metadata on at least one linked file of %s", citeKey));
+                } else {
+                    System.err.println(String.format("Cannot write XMP metadata on any linked files of %s. Make sure there is at least one linked file and the path is correct.", citeKey));
+                }
+            }
+            if (embeddBibfile) {
+                if (embeddedBibFilePdfExporter.exportToAllFilesOfEntry(databaseContext, encoding, filePreferences, entry, List.of(entry))) {
+                    System.out.println(String.format("Successfully embedded metadata on at least one linked file of %s", citeKey));
+                } else {
+                    System.out.println(String.format("Cannot embedd metadata on any linked files of %s. Make sure there is at least one linked file and the path is correct.", citeKey));
+                }
             }
         } catch (Exception e) {
-            LOGGER.error(String.format("Failed writing XMP metadata on a linked file of %s.", citeKey));
+            LOGGER.error(String.format("Failed writing metadata on a linked file of %s.", citeKey));
         }
     }
 
-    private void writeXMPtoPdfByCitekey(BibDatabaseContext databaseContext, BibDatabase dataBase, Vector<String> citeKeys, Charset encoding, FilePreferences filePreferences, XmpPdfExporter xmpPdfExporter) {
+    private void writeMetadatatoPdfByCitekey(BibDatabaseContext databaseContext, BibDatabase dataBase, Vector<String> citeKeys, Charset encoding, FilePreferences filePreferences, XmpPdfExporter xmpPdfExporter, EmbeddedBibFilePdfExporter embeddedBibFilePdfExporter, boolean writeXMP, boolean embeddBibfile) {
         for (String citeKey : citeKeys) {
             List<BibEntry> bibEntryList = dataBase.getEntriesByCitationKey(citeKey);
             if (bibEntryList.isEmpty()) {
-                LOGGER.error(String.format("Skipped - Cannot find %s in library.", citeKey));
+                System.err.println(String.format("Skipped - Cannot find %s in library.", citeKey));
                 continue;
             }
             for (BibEntry entry : bibEntryList) {
-                writeXMPtoPDFsOfEntry(databaseContext, citeKey, entry, encoding, filePreferences, xmpPdfExporter);
+                writeMetadatatoPDFsOfEntry(databaseContext, citeKey, entry, encoding, filePreferences, xmpPdfExporter, embeddedBibFilePdfExporter, writeXMP, embeddBibfile);
             }
         }
     }
 
-    private void writeXMPtoPdfByFileNames(BibDatabaseContext databaseContext, BibDatabase dataBase, Vector<String> fileNames, Charset encoding, FilePreferences filePreferences, XmpPdfExporter xmpPdfExporter) {
+    private void writeMetadatatoPdfByFileNames(BibDatabaseContext databaseContext, BibDatabase dataBase, Vector<String> fileNames, Charset encoding, FilePreferences filePreferences, XmpPdfExporter xmpPdfExporter, EmbeddedBibFilePdfExporter embeddedBibFilePdfExporter, boolean writeXMP, boolean embeddBibfile) {
         for (String fileName : fileNames) {
             Path filePath = Path.of(fileName);
             if (!filePath.isAbsolute()) {
-                filePath = FileHelper.find(fileName, databaseContext.getFileDirectories(filePreferences)).orElse(FileHelper.find(fileName, Arrays.asList(Path.of("").toAbsolutePath())).orElse(filePath));
+                filePath = FileHelper.find(fileName, databaseContext.getFileDirectories(filePreferences)).orElse(FileHelper.find(fileName, List.of(Path.of("").toAbsolutePath())).orElse(filePath));
             }
             if (Files.exists(filePath)) {
                 try {
-                    if (xmpPdfExporter.exportToFileByPath(databaseContext, dataBase, encoding, filePreferences, filePath)) {
-                        LOGGER.info(String.format("Successfully written XMP metadata of at least one entry to %s", fileName));
-                    } else {
-                        LOGGER.error(String.format("File %s is not linked to any entry in database.", fileName));
+                    if (writeXMP) {
+                        if (xmpPdfExporter.exportToFileByPath(databaseContext, dataBase, encoding, filePreferences, filePath)) {
+                            System.out.println(String.format("Successfully written XMP metadata of at least one entry to %s", fileName));
+                        } else {
+                            System.out.println(String.format("File %s is not linked to any entry in database.", fileName));
+                        }
+                    }
+                    if (embeddBibfile) {
+                        if (embeddedBibFilePdfExporter.exportToFileByPath(databaseContext, dataBase, encoding, filePreferences, filePath)) {
+                            System.out.println(String.format("Successfully embedded XMP metadata of at least one entry to %s", fileName));
+                        } else {
+                            System.out.println(String.format("File %s is not linked to any entry in database.", fileName));
+                        }
                     }
                 } catch (IOException e) {
-                    LOGGER.error("Error accessing files.", fileName);
+                    LOGGER.error("Error accessing file '{}'.", fileName);
                 } catch (Exception e) {
                     LOGGER.error(String.format("Error writing entry to %s.", fileName));
                 }
@@ -342,7 +379,7 @@ public class ArgumentProcessor {
         BibDatabaseContext databaseContext = pr.getDatabaseContext();
         BibDatabase dataBase = pr.getDatabase();
 
-        SearchPreferences searchPreferences = Globals.prefs.getSearchPreferences();
+        SearchPreferences searchPreferences = preferencesService.getSearchPreferences();
         SearchQuery query = new SearchQuery(searchTerm, searchPreferences.getSearchFlags());
         List<BibEntry> matches = new DatabaseSearcher(query, dataBase).getMatches();
 
@@ -352,18 +389,16 @@ public class ArgumentProcessor {
 
             // read in the export format, take default format if no format entered
             switch (data.length) {
-                case 3:
-                    formatName = data[2];
-                    break;
-                case 2:
-                    // default exporter: HTML table (with Abstract & BibTeX)
-                    formatName = "tablerefsabsbib";
-                    break;
-                default:
+                case 3 -> formatName = data[2];
+                case 2 ->
+                        // default exporter: HTML table (with Abstract & BibTeX)
+                        formatName = "tablerefsabsbib";
+                default -> {
                     System.err.println(Localization.lang("Output file missing").concat(". \n \t ")
                                                    .concat(Localization.lang("Usage")).concat(": ") + JabRefCLI.getExportMatchesSyntax());
                     noGUINeeded = true;
                     return false;
+                }
             }
 
             // export new database
@@ -375,7 +410,7 @@ public class ArgumentProcessor {
                 try {
                     System.out.println(Localization.lang("Exporting") + ": " + data[1]);
                     exporter.get().export(databaseContext, Path.of(data[1]),
-                            databaseContext.getMetaData().getEncoding().orElse(Globals.prefs.getDefaultEncoding()),
+                            databaseContext.getMetaData().getEncoding().orElse(preferencesService.getDefaultEncoding()),
                             matches);
                 } catch (Exception ex) {
                     System.err.println(Localization.lang("Could not export file") + " '" + data[1] + "': "
@@ -413,9 +448,18 @@ public class ArgumentProcessor {
                 // BIB files to open. Other files, and files that could not be opened
                 // as bib, we try to import instead.
                 boolean bibExtension = aLeftOver.toLowerCase(Locale.ENGLISH).endsWith("bib");
+
                 ParserResult pr = new ParserResult();
                 if (bibExtension) {
-                    pr = OpenDatabase.loadDatabase(aLeftOver, Globals.prefs.getImportFormatPreferences(), Globals.prefs.getTimestampPreferences(), Globals.getFileUpdateMonitor());
+                    try {
+                        pr = OpenDatabase.loadDatabase(
+                                Path.of(aLeftOver),
+                                preferencesService.getImportFormatPreferences(),
+                                Globals.getFileUpdateMonitor());
+                    } catch (IOException ex) {
+                        pr = ParserResult.fromError(ex);
+                        LOGGER.error("Error opening file '{}'", aLeftOver, ex);
+                    }
                 }
 
                 if (!bibExtension || (pr.isEmpty())) {
@@ -449,7 +493,7 @@ public class ArgumentProcessor {
         }
 
         if (!cli.isBlank() && cli.isBibtexImport()) {
-            importBibtexToOpenBase(cli.getBibtexImport()).ifPresent(loaded::add);
+            importBibtexToOpenBase(cli.getBibtexImport(), preferencesService.getImportFormatPreferences()).ifPresent(loaded::add);
         }
 
         return loaded;
@@ -482,7 +526,7 @@ public class ArgumentProcessor {
     private void saveDatabase(BibDatabase newBase, String subName) {
         try {
             System.out.println(Localization.lang("Saving") + ": " + subName);
-            SavePreferences prefs = Globals.prefs.getSavePreferences();
+            SavePreferences prefs = preferencesService.getSavePreferences();
             AtomicFileWriter fileWriter = new AtomicFileWriter(Path.of(subName), prefs.getEncoding());
             BibDatabaseWriter databaseWriter = new BibtexDatabaseWriter(fileWriter, prefs, Globals.entryTypesManager);
             databaseWriter.saveDatabase(new BibDatabaseContext(newBase));
@@ -520,14 +564,11 @@ public class ArgumentProcessor {
             // Set the global variable for this database's file directory before exporting,
             // so formatters can resolve linked files correctly.
             // (This is an ugly hack!)
-            File theFile = pr.getFile().get();
-            if (!theFile.isAbsolute()) {
-                theFile = theFile.getAbsoluteFile();
-            }
+            Path path = pr.getPath().get().toAbsolutePath();
             BibDatabaseContext databaseContext = pr.getDatabaseContext();
-            databaseContext.setDatabasePath(theFile.toPath());
+            databaseContext.setDatabasePath(path);
             Globals.prefs.fileDirForDatabase = databaseContext
-                    .getFileDirectories(Globals.prefs.getFilePreferences());
+                    .getFileDirectories(preferencesService.getFilePreferences());
             System.out.println(Localization.lang("Exporting") + ": " + data[0]);
             Optional<Exporter> exporter = Globals.exportFactory.getExporterByName(data[1]);
             if (exporter.isEmpty()) {
@@ -537,7 +578,7 @@ public class ArgumentProcessor {
                 try {
                     exporter.get().export(pr.getDatabaseContext(), Path.of(data[0]),
                             pr.getDatabaseContext().getMetaData().getEncoding()
-                              .orElse(Globals.prefs.getDefaultEncoding()),
+                              .orElse(preferencesService.getDefaultEncoding()),
                             pr.getDatabaseContext().getDatabase().getEntries());
                 } catch (Exception ex) {
                     System.err.println(Localization.lang("Could not export file") + " '" + data[0] + "': "
@@ -549,15 +590,16 @@ public class ArgumentProcessor {
 
     private void importPreferences() {
         try {
-            Globals.prefs.importPreferences(cli.getPreferencesImport());
-            Globals.entryTypesManager.addCustomOrModifiedTypes(Globals.prefs.getBibEntryTypes(BibDatabaseMode.BIBTEX),
-                    Globals.prefs.getBibEntryTypes(BibDatabaseMode.BIBLATEX));
-            List<TemplateExporter> customExporters = Globals.prefs.getCustomExportFormats(Globals.journalAbbreviationRepository);
+            preferencesService.importPreferences(Path.of(cli.getPreferencesImport()));
+            Globals.entryTypesManager.addCustomOrModifiedTypes(preferencesService.getBibEntryTypes(BibDatabaseMode.BIBTEX),
+                    preferencesService.getBibEntryTypes(BibDatabaseMode.BIBLATEX));
+            List<TemplateExporter> customExporters = preferencesService.getCustomExportFormats(Globals.journalAbbreviationRepository);
             LayoutFormatterPreferences layoutPreferences =
-                    Globals.prefs.getLayoutFormatterPreferences(Globals.journalAbbreviationRepository);
-            SavePreferences savePreferences = Globals.prefs.getSavePreferencesForExport();
-            XmpPreferences xmpPreferences = Globals.prefs.getXmpPreferences();
-            Globals.exportFactory = ExporterFactory.create(customExporters, layoutPreferences, savePreferences, xmpPreferences);
+                    preferencesService.getLayoutFormatterPreferences(Globals.journalAbbreviationRepository);
+            SavePreferences savePreferences = preferencesService.getSavePreferencesForExport();
+            XmpPreferences xmpPreferences = preferencesService.getXmpPreferences();
+            BibDatabaseMode bibDatabaseMode = preferencesService.getDefaultBibDatabaseMode();
+            Globals.exportFactory = ExporterFactory.create(customExporters, layoutPreferences, savePreferences, xmpPreferences, bibDatabaseMode, Globals.entryTypesManager);
         } catch (JabRefException ex) {
             LOGGER.error("Cannot import preferences", ex);
         }
@@ -567,7 +609,7 @@ public class ArgumentProcessor {
         if ("all".equals(value.trim())) {
             try {
                 System.out.println(Localization.lang("Setting all preferences to default values."));
-                Globals.prefs.clear();
+                preferencesService.clear();
                 new SharedDatabasePreferences().clear();
             } catch (BackingStoreException e) {
                 System.err.println(Localization.lang("Unable to clear preferences."));
@@ -576,11 +618,11 @@ public class ArgumentProcessor {
         } else {
             String[] keys = value.split(",");
             for (String key : keys) {
-                if (Globals.prefs.hasKey(key.trim())) {
+                try {
+                    preferencesService.deleteKey(key.trim());
                     System.out.println(Localization.lang("Resetting preference key '%0'", key.trim()));
-                    Globals.prefs.clear(key.trim());
-                } else {
-                    System.out.println(Localization.lang("Unknown preference key '%0'", key.trim()));
+                } catch (IllegalArgumentException e) {
+                    System.out.println(e.getMessage());
                 }
             }
         }
@@ -592,8 +634,8 @@ public class ArgumentProcessor {
             LOGGER.info(Localization.lang("Automatically setting file links"));
             AutoSetFileLinksUtil util = new AutoSetFileLinksUtil(
                     parserResult.getDatabaseContext(),
-                    Globals.prefs.getFilePreferences(),
-                    Globals.prefs.getAutoLinkPreferences(),
+                    preferencesService.getFilePreferences(),
+                    preferencesService.getAutoLinkPreferences(),
                     ExternalFileTypes.getInstance());
             util.linkAssociatedFiles(database.getEntries(), new NamedCompound(""));
         }
@@ -605,7 +647,9 @@ public class ArgumentProcessor {
 
             LOGGER.info(Localization.lang("Regenerating citation keys according to metadata"));
 
-            CitationKeyGenerator keyGenerator = new CitationKeyGenerator(parserResult.getDatabaseContext(), Globals.prefs.getCitationKeyPatternPreferences());
+            CitationKeyGenerator keyGenerator = new CitationKeyGenerator(
+                    parserResult.getDatabaseContext(),
+                    preferencesService.getCitationKeyPatternPreferences());
             for (BibEntry entry : database.getEntries()) {
                 keyGenerator.generateAndSetKey(entry);
             }
@@ -629,7 +673,7 @@ public class ArgumentProcessor {
         String engine = split[0];
         String query = split[1];
 
-        Set<SearchBasedFetcher> fetchers = WebFetchers.getSearchBasedFetchers(Globals.prefs.getImportFormatPreferences());
+        Set<SearchBasedFetcher> fetchers = WebFetchers.getSearchBasedFetchers(preferencesService.getImportFormatPreferences());
         Optional<SearchBasedFetcher> selectedFetcher = fetchers.stream()
                                                                .filter(fetcher -> fetcher.getName().equalsIgnoreCase(engine))
                                                                .findFirst();
